--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,4 +20,19 @@
         <item name="titleTextColor">@color/layout_title</item>
     </style>
 
+    <style name="smallFont" parent="AppTheme">
+        <item name="android:padding">4dp</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:fontFamily">@font/montserrat_light</item>
+        <item name="android:textColor">@color/layout_item_desc</item>
+    </style>
+
+    <style name="regularFont" parent="AppTheme">
+        <item name="android:padding">4dp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">@font/montserrat_light</item>
+        <item name="android:textColor">@color/bg_lock</item>
+    </style>
+
+
 </resources>
