--- a/app/src/main/res/layout/activity_add_note.xml
+++ b/app/src/main/res/layout/activity_add_note.xml
@@ -13,13 +13,13 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="@android:color/white"
             android:orientation="vertical"
-            android:paddingBottom="@dimen/margin_large"
             android:paddingLeft="@dimen/margin_large"
-            android:paddingRight="@dimen/margin_large"
             android:paddingTop="@dimen/margin_xxlarge"
+            android:paddingRight="@dimen/margin_large"
+            android:paddingBottom="@dimen/margin_large"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <com.an.customfontview.CustomEditText
@@ -40,8 +40,8 @@
                 android:id="@+id/edit_desc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_large"
                 android:layout_marginTop="@dimen/margin_xxxxlarge"
+                android:layout_marginBottom="@dimen/margin_large"
                 android:background="@android:color/transparent"
                 android:hint="@string/edit_desc"
                 android:inputType="textCapSentences|textMultiLine"
@@ -55,8 +55,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_large"
                 android:layout_marginTop="@dimen/margin_xxxlarge"
+                android:layout_marginBottom="@dimen/margin_large"
                 android:orientation="horizontal"
                 android:paddingBottom="@dimen/padding">
 
