--- a/app/src/main/res/layout/view_dog_breed.xml
+++ b/app/src/main/res/layout/view_dog_breed.xml
@@ -17,14 +17,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/list_item_bg"
         android:clickable="true"
+        android:elevation="8dp"
         android:focusable="true"
         android:onClick="@{() -> viewModel.onItemClick(position)}"
-        android:paddingStart="32dp"
-        android:paddingTop="16dp"
-        android:paddingEnd="32dp"
-        android:paddingBottom="16dp">
+        android:padding="8dp">
 
         <ImageView
             android:layout_width="48dp"
@@ -35,6 +37,7 @@
 
         <TextView
             android:id="@+id/txtName"
+            style="@style/regularFont"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
@@ -42,7 +45,7 @@
             android:paddingStart="32dp"
             android:paddingEnd="32dp"
             android:text="@{viewModel.getDogBreedAt(position).breed}"
-            android:textSize="16dp"
             tools:text="Test" />
+
     </LinearLayout>
 </layout>
